--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<meta name='description' content='Módulo para agregar un vínculo hacia el aviso de privacidad de cualquier sitio web.' />
 
 		<!-- Recuerda vincular el estilo y el js del aviso -->
+		<link rel="stylesheet" type="text/css" href="aviso/aviso.css">
+		<script src="aviso/aviso.js"></script>
 
 		<!-- Estilos de ésta página -->
 		<style>
