Corrección de estilos para el iframe

--- a/AVISO/aviso.html
+++ b/AVISO/aviso.html
@@ -6,7 +6,7 @@
 		<meta name='description' content='El Aviso de Privacidad de cada página' />
 		<link rel="stylesheet" type="text/css" href="aviso.css">
 	</head>
-	<body>
+	<body id='aviso-privacidad'>
 		<!-- texto para el aviso de privacidad -->
 		<h1>AVISO DE PRIVACIDAD</h1>
 
